--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 #  group property value. This is usually (but not necessarily) the first 2+ elements of the base
 #  package name, and should be written entirely in lower case, with the components separated by
 #  periods, and without enclosing quotes.
-group=replace.me
+group=Team 1
 version=1.0.0-SNAPSHOT
 
 # TODO: Replace "replace.me.project.Main" with the fully qualified class name of the project's main
