--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version "$shadowVersion"
+    id 'com.github.johnrengelman.shadow' version "8.1.1"
     id 'application'
+    id 'java'
+}
+
+shadowJar {
+    mergeServiceFiles()
 }
 
 java {
@@ -24,7 +29,10 @@ repositories {
 
 dependencies {
 
-    apply plugin: 'idea'
+//    apply plugin: 'idea'
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
+
+    implementation 'org.jline:jline:3.23.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
