--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ version=2.1.2
 
 # Replace "replace.me.project.Main" with the fully qualified class name of the project's main
 #  class, without any quotes, as the value of the mainClass property.
-mainClass=Anuna2D.model.Main
+mainClass=Anuna2D.com.anura.main.Main
 
 javaVersion=11
 shadowVersion=8.1.1
