--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@
 #  package name, and should be written entirely in lower case, with the components separated by
 #  periods, and without enclosing quotes.
 group=welcome-to-anura
-version=2.1.2
+version=2.2.0
 
 # Replace "replace.me.project.Main" with the fully qualified class name of the project's main
 #  class, without any quotes, as the value of the mainClass property.
-mainClass=Anuna2D.com.anura.main.Main
+mainClass=com.anura.main.GuiMain
 
 javaVersion=11
 shadowVersion=8.1.1
